log
Sat 22 Mar 2025 01:11:40 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:8: error: unused variable ‘suma’ [-Werror=unused-variable]
   61 |    int suma = 0;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
3f6cb15
Sat 22 Mar 2025 01:11:54 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
aefcea6
Sat 22 Mar 2025 01:24:17 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:5: error: ‘dato’ undeclared (first use in this function)
   62 |    *dato = (int*)first(L);
      |     ^~~~
exercises.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f3d53d6
Sat 22 Mar 2025 01:24:33 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c8427f8
Sat 22 Mar 2025 01:25:21 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:15: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |    int dato = first(L);
      |               ^~~~~
exercises.c:63:15: error: comparison between pointer and integer [-Werror]
   63 |    while(dato != NULL)
      |               ^~
exercises.c:66:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |       dato = next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
290a787
Sat 22 Mar 2025 01:25:29 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |       suma += dato;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
f4c09e6
Sat 22 Mar 2025 01:25:51 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
714ce85
Sun 23 Mar 2025 07:02:54 PM UTC: 
 exercises.c | 27 ++++++++++++++++++++-------
 1 file changed, 20 insertions(+), 7 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:17: error: comparison between pointer and integer [-Werror]
   89 |       if(numero == elem)
      |                 ^~
exercises.c:91:21: error: passing argument 1 of ‘popCurrent’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   91 |          popCurrent(numero);
      |                     ^~~~~~
      |                     |
      |                     int *
In file included from exercises.c:6:
arraylist.h:32:24: note: expected ‘List *’ but argument is of type ‘int *’
   32 | void *popCurrent(List *L);
      |                  ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
e6a9dbf
Sun 23 Mar 2025 07:03:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:87:18: error: comparison between pointer and integer [-Werror]
   87 |    while(*numero != NULL)
      |                  ^~
exercises.c:89:17: error: comparison between pointer and integer [-Werror]
   89 |       if(numero == elem)
      |                 ^~
exercises.c:91:21: error: passing argument 1 of ‘popCurrent’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   91 |          popCurrent(numero);
      |                     ^~~~~~
      |                     |
      |                     int *
In file included from exercises.c:6:
arraylist.h:32:24: note: expected ‘List *’ but argument is of type ‘int *’
   32 | void *popCurrent(List *L);
      |                  ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
363e962
